SERVER-92964 Ensure collation is followed when hashing field in index… (#25537)

GitOrigin-RevId: 4739c302ec27a31e9e1970e41c055bbe2edef0ac